added center ripple, improved checkbox and switch design, removed less, improved preloader, polished design

--- a/browser.html
+++ b/browser.html
@@ -1,26 +1,26 @@
 <div class="tabWindow">
 
   <div class="bar" style="z-index: 9999;">
-    <div class="ripple menuBtn">
+    <div class="ripple-icon menuBtn">
       <div class="menuBtnIcon">
       </div>
     </div>
-    <div class="ripple backBtn">
+    <div class="ripple-icon backBtn">
       <div class="backBtnIcon">
       </div>
     </div>
-    <div class="ripple forwardBtn">
+    <div class="ripple-icon forwardBtn">
       <div class="forwardBtnIcon">
       </div>
     </div>
-    <div class="ripple refreshBtn">
+    <div class="ripple-icon refreshBtn">
       <div class="refreshBtnIcon">
       </div>
     </div>
     <div class="searchBox">
       <input class="searchInput"></input>
     </div>
-    <div class="ripple extBtn">
+    <div class="ripple-icon extBtn">
       <div class="extBtnIcon">
       </div>
     </div>
@@ -28,7 +28,7 @@
 
   <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
 
-    <webview class="webview" preload="./js/preload.js" autosize="on" src="about:blank" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none; ">
+    <webview class="webview" preload="./js/preload.js" autosize="on" src="webexpress://newtab" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none;">
 
     </webview>
 
@@ -78,7 +78,7 @@
     </div>
     <div class="suggestions">
       <ul class="suggestions-ul">
-          
+
       </ul>
     </div>
     <div class="ext-menu">
