--- a/test.html
+++ b/test.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Material Design Controls</title>
-
-    <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
-    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <link href="css/controls/materialdesign.less" rel="stylesheet/less" type="text/css" />
-    <script src="js/less.js" type="text/javascript"></script>
-    <script src="js/materialdesign.js" type="text/javascript"></script>
+     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
+    <link href="css/controls/materialdesign.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="switch" style="margin-left: 32px;margin-top: 32px;">
+    <div class="switch ripple-icon" data-ripple-color="#444" style="margin-left: 32px;margin-top: 32px;">
     </div>
     <div class="switch" style="margin-left: 32px;margin-top: 32px;">
     </div>
-    <div class="switch"></div>
+    <div class="preloader" style="width: 64px;" thickness="6" color="#3F51B5"></div>
 
-    <div class="checkbox" style="margin: 32px;"></div>
-    <div class="md-preloader"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="16" width="16" viewbox="0 0 75 75"><circle cx="37.5" cy="37.5" r="33.5" stroke-width="8"/></svg></div>
-
+    <div class="checkbox ripple-icon" data-ripple-color="#444" style="margin: 32px;"></div>
+    <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="js/jquery-ui.min.js" type="text/javascript"></script>
+     <script src="js/ripple.js"></script>
+    <script src="js/materialdesign.js" type="text/javascript"></script>
   </body>
 </html>
