cleaned project file structure

--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>History</title>
-    <link rel="stylesheet" href="../css/history.css" />
+    <link rel="stylesheet" href="css/history.css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
     <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
     <style>
@@ -50,11 +50,11 @@
 
         </div>
     </div>
-    <script src="../js/jquery-3.1.0.min.js"></script>
-    <script src="../js/jquery-ui.min.js"></script>
-    <script src="js/ripple.js"></script>
-    <script src="js/materialdesign.js" type="text/javascript"></script>
-    <script src="js/history.js"></script>
+    <script src="js/jquery/jquery-3.1.0.min.js"></script>
+    <script src="js/jquery/jquery-ui.min.js"></script>
+    <script src="js/materialdesign/ripple.js"></script>
+    <script src="js/materialdesign/materialdesign.js" type="text/javascript"></script>
+    <script src="js/applets/history.js"></script>
     <script>
         setInterval(function() {
             $('.searchBox').css('margin-left', (($(window).width() - $('.searchBox').width()) / 2) - 105);
