--- a/browser.html
+++ b/browser.html
@@ -28,7 +28,7 @@
 
   <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
 
-    <webview class="webview" preload="./js/preload.js" autosize="on" src="webexpress://newtab" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none;">
+    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none;">
 
     </webview>
 
