--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/browser.css" />
-
     <link rel="stylesheet" href="css/controls/materialdesign.css" type="text/css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
 
@@ -52,18 +51,18 @@
             module = undefined;
         }
     </script>
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery/jquery-3.1.0.min.js"></script>
+    <script src="js/jquery/jquery-ui.min.js"></script>
     <script>
         if (window.module) module = window.module;
     </script>
-    <script src="js/materialdesign.js"></script>
+    <script src="js/materialdesign/materialdesign.js"></script>
     <script src="js/utils.js"></script>
-    <script src="js/tabwindow.js"></script>
-    <script src="js/tabbar.js"></script>
-    <script src="js/ripple.js"></script>
+    <script src="js/applets/tabwindow.js"></script>
+    <script src="js/tabsystem/tabbar.js"></script>
+    <script src="js/materialdesign/ripple.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/api.js"></script>
+    <script src="js/extensions/api.js"></script>
 </body>
 
 
