--- a/browser.html
+++ b/browser.html
@@ -28,9 +28,7 @@
 
   <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
 
-    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none;">
-
-    </webview>
+    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none;"/>
 
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
