small layout fixes, fix tabs reordering, change toolbar color in history

--- a/browser.html
+++ b/browser.html
@@ -24,11 +24,15 @@
       <div class="extBtnIcon">
       </div>
     </div>
-  </div>
+    <div class="suggestions">
+      <ul class="suggestions-ul">
 
+      </ul>
+    </div>
+  </div>
   <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
 
-    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none;"/>
+    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100vw; margin-top: 46px; margin-bottom: 3px;"/>
 
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
@@ -74,11 +78,7 @@
         </li>
       </ul>
     </div>
-    <div class="suggestions">
-      <ul class="suggestions-ul">
-
-      </ul>
-    </div>
+    
     <div class="ext-menu">
       <ul class="ext-page">
 
