--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <div class="addTabImg"></div>
             </div>
         </div>
+        <div class="border5"></div>
     </div>
 
     </script>
