change new tab page design

--- a/newtab.html
+++ b/newtab.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>New tab</title>
-    <meta name='theme-color' content='#FAFAFA'>
-    <link href="css/newtab.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="baner"></div>
-    <div class="md-input url">
-        <div class="hint">Write url or search in Google</div>
-        <input class="text" type="text">
-        <div class="divider1"></div>
-        <div class="divider2"></div>
-    </div>
-    <ul class="bookmarks">
-        <li>
-            <div class="topbar">
-                <img src="img/nersentlogo.png">
-                <div class="pagetitle">Nersent</div>
-            </div> 
-        </li>
-    </ul>
-   <!-- <h1 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">New tab page.</h1>
+
+<head>
+  <meta charset="utf-8">
+  <title>New tab</title>
+  <meta name='theme-color' content='#FAFAFA'>
+  <link href="css/newtab.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="banner"></div>
+  <div class="md-input url">
+    <div class="hint">Write url or search in Google</div>
+    <input class="text" type="text">
+    <div class="divider1"></div>
+    <div class="divider2"></div>
+  </div>
+  <ul class="bookmarks">
+    <li class="bookmark">
+
+    </li>
+    <li class="bookmark">
+
+    </li>
+    <li class="bookmark">
+
+    </li>
+    <li class="bookmark">
+
+    </li>
+    <li class="bookmark">
+
+    </li>
+    <li class="bookmark">
+
+    </li>
+
+  </ul>
+
+  <!-- <h1 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">New tab page.</h1>
     <h3 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">This browser is in early development. Some functions may not work.</h3>-->
-  </body>
-  <script src="js/jquery/jquery-3.1.0.min.js"></script>
-  <script src="js/newtab.js"></script>
+</body>
+<script src="js/jquery/jquery-3.1.0.min.js"></script>
+<script src="js/newtab.js"></script>
+
 </html>
