redesigned suggestions box, changed history colors, better performance for color getting, fixed inspect element context menu item

--- a/history.html
+++ b/history.html
@@ -31,12 +31,12 @@
         <div class="default-toolbar">
             <h3 style="float: left;">History</h3>
             <div style="float:left;" class="searchBox">
-                <div style="margin-top: 0px;">Search</div>
+                <div style="margin-top: 1px; font-size: 15px; opacity: 0.8;">Search</div>
             </div>
         </div>
-        <div class="selecteditems-toolbar" style="position: absolute; top: -2px; visibility: hidden;">
+        <div class="selecteditems-toolbar" style="position: absolute; top: -2px; visibility: hidden; color: #fff;">
             <div id="unselect-btn" data-ripple-color="#444" style="float: left;margin-top: 24px;margin-right: 32px;" class="icon-button ripple-icon">
-                <div class="icon-button-content" style="background-image: url('img/close.png');"></div>
+                <div class="icon-button-content" style="background-image: url('img/close-white.png');"></div>
             </div>
             <p id="selected-items" style="float: left; margin-top: 24px;">Selected items: 1</p>
             <div id="delete-btn" data-ripple-color="#444" style="float: right; margin-top: 11px;" class="flat-button ripple">
