--- a/newtab.html
+++ b/newtab.html
@@ -5,13 +5,15 @@
   <meta charset="utf-8">
   <title>New tab</title>
   <meta name='theme-color' content='#FAFAFA'>
-  <link href="js/materialdesign/nersent/MaterialRipple.css" rel="stylesheet">
+  <link href="css/ripple.css" rel="stylesheet">
   <link href="css/newtab.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="topbar">
-
+    <ul class="rightnavbar">
+        <a href="http://www.nersent.tk" class="item nersent"></a>
+    </ul>
   </div>
   <div class="banner"></div>
   <div class="md-input url">
@@ -20,22 +22,21 @@
     <div class="divider1"></div>
     <div class="divider2"></div>
   </div>
-  <ul class="bookmarks">
-    <li class="bookmark ripple ripple-auto-mousedown" style="background-color: #3b5998;" data-ripple-fadein-opacity="0.4">
+  <div class="bookmarks">
+    <a href="http://www.facebook.com" class="bookmark ripple" style="background-color: #3b5998;">
        <img class="icon noselectable" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-facebook-512.png">
-       <div class="title">Facebook</div>
-    </li>
-    <li class="bookmark ripple ripple-auto-mousedown" style="background-color: #cf3427;" data-ripple-fadein-opacity="0.4">
+       <div class="title noselectable">Facebook</div>
+    </a>
+    <a href="http://www.youtube.com" class="bookmark ripple" style="background-color: #cf3427;">
        <img class="icon noselectable" src="http://учебныепрезентации.рф/images/joomgallery/thumbnails/_____1/___4/__5/flat_20141016_2042301237.png">
-       <div class="title">YouTube</div>
-    </li>
-  </ul>
+       <div class="title noselectable">YouTube</div>
+    </a>
+  </div>
 
   <!-- <h1 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">New tab page.</h1>
     <h3 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">This browser is in early development. Some functions may not work.</h3>-->
 </body>
 <script src="js/jquery/jquery-3.1.0.min.js"></script>
-<script src="js/materialdesign/nersent/MaterialRipple.js"></script>
+<script src="js/materialdesign/ripple.js"></script>
 <script src="js/newtab.js"></script>
-
 </html>
