--- a/newtab.html
+++ b/newtab.html
@@ -12,7 +12,10 @@
 <body>
   <div class="topbar">
     <ul class="rightnavbar">
-        <a href="http://www.nersent.tk" class="item nersent"></a>
+        <a href="http://www.nersent.tk" class="item nersent" title="Nersent's page"></a>
+        <a href="extension.html" class="item extension" title="Extension Store"></a>
+        <a href="game.html" class="item game" title="When you offline, you can play this game! :)"></a>
+        <div style="clear:both;"></div>
     </ul>
   </div>
   <div class="banner"></div>
