--- a/browser.html
+++ b/browser.html
@@ -29,10 +29,19 @@
 
       </ul>
     </div>
+    <div class="ext-menu">
+      <ul class="ext-page">
+
+      </ul>
+      <ul class="ext-indicators">
+
+      </ul>
+    </div>
   </div>
   <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
 
-    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100vw; margin-top: 46px; margin-bottom: 3px;"/>
+    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100vw; margin-top: 46px; margin-bottom: 3px;"
+    />
 
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
@@ -78,15 +87,8 @@
         </li>
       </ul>
     </div>
-    
-    <div class="ext-menu">
-      <ul class="ext-page">
 
-      </ul>
-      <ul class="ext-indicators">
 
-      </ul>
-    </div>
 
   </div>
 
