fixes for tabs, polished newtab design

--- a/browser.html
+++ b/browser.html
@@ -40,8 +40,7 @@
   </div>
   <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
 
-    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100vw; margin-top: 46px; margin-bottom: 3px;"
-    />
+    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100%; margin-top: 46px; margin-bottom: 3px;"/>
 
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
