added more events for api

--- a/history.html
+++ b/history.html
@@ -35,11 +35,11 @@
             </div>
         </div>
         <div class="selecteditems-toolbar" style="position: absolute; top: -2px; visibility: hidden; color: #fff;">
-            <div id="unselect-btn" data-ripple-color="#444" style="float: left;margin-top: 24px;margin-right: 32px;" class="icon-button ripple-icon">
+            <div id="unselect-btn" data-ripple-color="#fff" style="float: left;margin-top: 24px;margin-right: 32px;" class="icon-button ripple-icon">
                 <div class="icon-button-content" style="background-image: url('img/close-white.png');"></div>
             </div>
             <p id="selected-items" style="float: left; margin-top: 24px;">Selected items: 1</p>
-            <div id="delete-btn" data-ripple-color="#444" style="float: right; margin-top: 11px;" class="flat-button ripple">
+            <div id="delete-btn" data-ripple-color="#fff" style="float: right; margin-top: 11px;" class="flat-button ripple">
                 <div class="flat-button-content">DELETE</div>
             </div>
         </div>
