--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <script src="js/tabsystem/tabbar.js"></script>
     <script src="js/materialdesign/ripple.js"></script>
     <script src="js/main.js"></script>
-        <iframe id="extensions" style="height: 0px; width: 0px;display: none;" srcdoc="<html><body><script src='js/jquery/jquery-3.1.0.min.js'></script><script src='js/extensions/api.js'></script></body></html>">
+        <iframe id="extensions" style="height: 0px; width: 0px;display: none;" srcdoc="<html><body><script src='js/jquery/jquery-3.1.0.min.js'></script><script src='js/utils.js'></script><script src='js/extensions/api.js'></script></body></html>">
     </iframe>
 </body>
 
