--- a/browser.html
+++ b/browser.html
@@ -1,5 +1,4 @@
 <div class="tabWindow">
-
   <div class="bar" style="z-index: 9999;">
     <div class="ripple-icon menuBtn">
       <div class="menuBtnIcon">
@@ -26,22 +25,18 @@
     </div>
     <div class="suggestions">
       <ul class="suggestions-ul">
-
       </ul>
     </div>
     <div class="ext-menu">
       <ul class="ext-page">
-
       </ul>
       <ul class="ext-indicators">
-
       </ul>
     </div>
   </div>
   <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
-
-    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100%; margin-top: 46px; margin-bottom: 3px;"/>
-
+    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100%; margin-top: 46px; margin-bottom: 3px;"
+    />
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
         <li data-ripple-color="#444" class="menu-item ripple">
@@ -86,11 +81,5 @@
         </li>
       </ul>
     </div>
-
-
-
   </div>
-
-
-
 </div>
