--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <script src="js/main.js"></script>
     <iframe id="extensions" style="height: 0px; width: 0px;display: none;" srcdoc="<html><body><script src='js/jquery/jquery-3.1.0.min.js'></script><script src='js/utils.js'></script><script src='js/extensions/api.js'></script></body></html>">
     </iframe>
+    <script>require(`electron-connect`).client.create()</script>
 </body>
 
 </html>
