--- a/history.html
+++ b/history.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>History</title>
-    <link rel="stylesheet" href="css/history.css" />
+    <link href="css/history.css" rel="stylesheet" type="text/css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
     <link href="js/materialdesign/css/materialdesign.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         @font-face {
             font-family: "Roboto";
@@ -26,41 +27,34 @@
 </head>
 
 <body>
-    <div class="toolbar">
-        <div class="default-toolbar" style="opacity: 1">
-            <h3 style="float: left;">History</h3>
-            <div style="float:left;" class="searchBox">
-                <div style="margin-top: 1px; font-size: 15px; opacity: 0.8;">Search</div>
+    <div class="actionbar">
+        <div class="normal">
+            <div class="toolbar">
+                <div class="title" style="font-size: 18px">History</div>
+                <div class="search-bar">
+                    <div class="search-box">
+                        <i style="font-size:19px;" class="material-icons search-icon">search</i>
+                        <div class="hint">Search</div>
+                        <input class="search-input"></input>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="selecteditems-toolbar" style="position: absolute; top: -2px; visibility: hidden; color: #fff;opacity: 0;">
-            <div id="unselect-btn" data-ripple-color="#fff" style="float: left;margin-top: 24px;margin-right: 32px;" class="icon-button ripple-icon">
-                <div class="icon-button-content" style="background-image: url('img/close-white.png');"></div>
-            </div>
-            <p id="selected-items" style="float: left; margin-top: 24px;">Selected items: 1</p>
-            <div id="delete-btn" data-ripple-color="#fff" style="float: right; margin-top: 11px;" class="flat-button ripple">
-                <div class="flat-button-content">DELETE</div>
+        <div class="selected">
+            <div class="center">
+                <div class="icon-button ripple-icon" id="unselect-btn"><i class="material-icons">close</i></div>
+                <div class="selected-items-text">Selected items: 0</div>
+                <div class="flat-button ripple" id="delete-btn">DELETE</div>
+                <div class="flat-button ripple" id="cancel-btn">CANCEL</div>
             </div>
         </div>
     </div>
     <div class="content">
-        <div class="card">
-        </div>
     </div>
-    <div style="height: 20px; width: 20px;" class="test"></div>
-    <div class="test"></div>
     <script src="js/jquery/jquery-3.1.0.min.js"></script>
-    <script src="js/jquery/jquery-ui.min.js"></script>
     <script src="js/materialdesign/ripple.js"></script>
     <script src="js/materialdesign/materialdesign.js" type="text/javascript"></script>
     <script src="js/applets/history.js"></script>
-    <script>
-        setInterval(function() {
-            $('.searchBox').css('margin-left', (($(window).width() - $('.searchBox').width()) / 2) - 105);
-            $('.selecteditems-toolbar').css('margin-left', (($(window).width() - $('.selecteditems-toolbar').width()) / 2) - 28);
-            $('.selecteditems-toolbar').css('width', $('.card').width() + 48);
-        }, 1);
-    </script>
 </body>
 
 </html>
