fixed window resizing

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <body>
     <div class="titlebar" id="titlebar">
+        <div class="draggable">
+        </div>
         <div class="ripple windowbutton windowbutton-close"></div>
         <div class="windowbutton windowbutton-maximize"></div>
         <div class="windowbutton windowbutton-minimize"></div>
