removed icons changed to font with icons, fixed bugs with webview resizing

--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
     <link href="css/history.css" rel="stylesheet" type="text/css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
     <link href="js/materialdesign/css/materialdesign.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link href="css/material-icons.css" rel="stylesheet">
     <style>
         @font-face {
             font-family: "Roboto";
