--- a/browser.html
+++ b/browser.html
@@ -1,27 +1,23 @@
 <div class="tabWindow">
   <div class="bar" style="z-index: 9999;">
     <div class="ripple-icon menuBtn">
-      <div class="menuBtnIcon">
-      </div>
+      <i class="material-icons" style="font-size: 22px; margin-top: 8px; margin-left: 8px;">menu</i>
     </div>
     <div class="ripple-icon backBtn">
-      <div class="backBtnIcon">
-      </div>
+      <i class="material-icons" style="font-size: 22px; margin-top: 8px; margin-left: 8px;">arrow_back</i>
     </div>
     <div class="ripple-icon forwardBtn">
-      <div class="forwardBtnIcon">
-      </div>
+      <i class="material-icons" style="font-size: 22px; margin-top: 8px; margin-left: 8px;">arrow_forward</i>
     </div>
     <div class="ripple-icon refreshBtn">
-      <div class="refreshBtnIcon">
-      </div>
+      <i class="material-icons" style="font-size: 22px; margin-top: 8px; margin-left: 8px;">refresh</i>
     </div>
     <div class="searchBox">
+      <i style="font-size: 18px; margin-top: 7px;margin-left: 6px;float: left;" class="material-icons">search</i>
       <input class="searchInput"></input>
     </div>
     <div class="ripple-icon extBtn">
-      <div class="extBtnIcon">
-      </div>
+      <i class="material-icons" style="font-size: 22px; margin-top: 8px; margin-left: 8px;">more_vert</i>
     </div>
     <div class="suggestions">
       <ul class="suggestions-ul">
@@ -34,9 +30,8 @@
       </ul>
     </div>
   </div>
-  <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
-    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;width: 100%; margin-top: 46px; margin-bottom: 3px;"
-    />
+  <div class="content">
+    <webview class="webview" preload="js/extensions/preload.js" autosize="on" src="webexpress://newtab" style="display: flex;height: 60px;margin-top:48px;"></webview>
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
         <li data-ripple-color="#444" class="menu-item ripple">
