--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/browser.css" />
+    <link href="css/material-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="js/materialdesign/css/materialdesign.css" type="text/css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
     <style>
@@ -36,7 +37,7 @@
         <div class="windowbutton windowbutton-minimize"></div>
         <div class="tabbar" id="tabbar">
             <div class="addTabBtn" id="addTab">
-                <div class="addTabImg"></div>
+                <i class="material-icons" style="font-size: 22px; margin-top: 3px; margin-left: 5px;">add</i>
             </div>
         </div>
         <div class="border5"></div>
