added icons to menu

--- a/browser.html
+++ b/browser.html
@@ -35,44 +35,44 @@
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/settings.png');" class="menu-icon"></div>
-          <p style="display: inline;">Settings</p>
+          <i class="material-icons">settings</i>
+          <p class="menu-text">Settings</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/history.png');" class="menu-icon"></div>
-          <p style="display: inline;">History</p>
+          <i class="material-icons">history</i>
+          <p class="menu-text">History</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/bookmarks.png');" class="menu-icon"></div>
-          <p style="display: inline;">Bookmarks</p>
+          <i class="material-icons">collections_bookmark</i>
+          <p class="menu-text">Bookmarks</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/downloads.png');" class="menu-icon"></div>
-          <p style="display: inline;">Downloads</p>
+          <i class="material-icons">file_download</i>
+          <p class="menu-text">Downloads</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/extensions.png');" class="menu-icon"></div>
-          <p style="display: inline;">Extensions</p>
+          <i class="material-icons">extension</i>
+          <p class="menu-text">Extensions</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/window.png');" class="menu-icon"></div>
-          <p style="display: inline;">New window</p>
+          <i class="material-icons">desktop_windows</i>
+          <p class="menu-text">New window</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/fullscreen.png');" class="menu-icon"></div>
-          <p style="display: inline;">Fullscreen</p>
+          <i class="material-icons">fullscreen</i>
+          <p class="menu-text">Fullscreen</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/dev.png');" class="menu-icon"></div>
-          <p style="display: inline;">Developer tools</p>
+          <i class="material-icons">code</i>
+          <p class="menu-text">Developer tools</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/screenshot.png');" class="menu-icon"></div>
-          <p style="display: inline;">Take screenshot</p>
+          <i class="material-icons">photo</i>
+          <p class="menu-text">Take screenshot</p>
         </li>
         <li data-ripple-color="#444" class="menu-item ripple">
-          <div style="background-image: url('img/privacy.png');" class="menu-icon"></div>
-          <p style="display: inline;">Private mode</p>
+         <i class="material-icons">vpn_lock</i>
+          <p class="menu-text">Private mode</p>
         </li>
       </ul>
     </div>
