--- a/index.html
+++ b/index.html
@@ -58,10 +58,20 @@
     </script>
     <script src="js/materialdesign/materialdesign.js"></script>
     <script src="js/utils.js"></script>
-    <script src="js/applets/tabwindow.js"></script>
     <script src="js/tabsystem/tabbar.js"></script>
     <script src="js/materialdesign/ripple.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/components/storage.js"></script>
+    <script src="js/components/colors.js"></script>
+    <script src="js/components/contextmenu.js"></script>
+    <script src="js/extensions/extensions.js"></script>
+    <script src="js/components/browser.js"></script>
+    <script src="js/components/webview.js"></script>
+    <script src="js/components/bar.js"></script>
+    <script src="js/components/extensionsmenu.js"></script>
+    <script src="js/components/suggestions.js"></script>
+    <script src="js/components/searchinput.js"></script>
+    <script src="js/components/menu.js"></script>
     <iframe id="extensions" style="height: 0px; width: 0px;display: none;" srcdoc="<html><body><script src='js/jquery/jquery-3.1.0.min.js'></script><script src='js/utils.js'></script><script src='js/extensions/api.js'></script></body></html>">
     </iframe>
     <script>require(`electron-connect`).client.create()</script>
