--- a/newtab.html
+++ b/newtab.html
@@ -23,15 +23,15 @@
     <div class="divider2"></div>
   </div>
   <div class="bookmarks">
-    <a href="http://www.nersent.tk/webexpress" class="bookmark ripple" style="background-color: #3F51B5;">
+    <a href="http://www.nersent.tk/webexpress" class="bookmark ripple" data-ripple-color="#fff" style="background-color: #3F51B5;">
       <img class="icon noselectable" src="http://nersent.tk/webexpress/favicon.png">
       <div class="title noselectable">WebExpress</div>
     </a>
-    <a href="http://www.facebook.com" class="bookmark ripple" style="background-color: #3b5998;">
+    <a href="http://www.facebook.com" class="bookmark ripple" data-ripple-color="#fff" style="background-color: #3b5998;">
       <img class="icon noselectable" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-facebook-512.png">
       <div class="title noselectable">Facebook</div>
     </a>
-    <a href="http://www.youtube.com" class="bookmark ripple" style="background-color: #cf3427;">
+    <a href="http://www.youtube.com" class="bookmark ripple" data-ripple-color="#fff" style="background-color: #cf3427;">
       <img class="icon noselectable" src="http://учебныепрезентации.рф/images/joomgallery/thumbnails/_____1/___4/__5/flat_20141016_2042301237.png">
       <div class="title noselectable">YouTube</div>
     </a>
